@@ -1,4 +1,4 @@
-from plone.app.testing.bbb import PloneTestCase
+from .BaseTestCase import BaseDXTestCase
 from plone.namedfile.file import NamedFile
 
 from Products.CMFDiffTool.interfaces import IDifference
@@ -7,9 +7,7 @@ from Products.CMFDiffTool import namedfile
 from Products.CMFDiffTool import testing
 
 
-class BinaryDiffTestCase(PloneTestCase):
-
-    layer = testing.package_layer
+class BinaryDiffTestCase(BaseDXTestCase):
 
     def test_should_detect_different_filename(self):
         self.loginAsPortalOwner()
