@@ -5,19 +5,18 @@ from zope.globalrequest import setRequest
 from plone.namedfile import NamedFile
 from Products.CMFDiffTool.interfaces import IDifference
 
-from plone.app.testing.bbb import PloneTestCase
+from .BaseTestCase import BaseDXTestCase
 
-from Products.CMFDiffTool import testing
 from Products.CMFDiffTool.dexteritydiff import DexterityCompoundDiff
 from Products.CMFDiffTool.dexteritydiff import EXCLUDED_FIELDS
 
+from Products.CMFDiffTool import testing
 
-class DexterityDiffTestCase(PloneTestCase):
 
-    layer = testing.package_layer
+class DexterityDiffTestCase(BaseDXTestCase):
 
     def afterSetUp(self):
-        setRequest(self.portal.REQUEST)
+        #setRequest(self.portal.REQUEST)
         self.loginAsPortalOwner()
 
     def test_should_diff(self):
